# Platformwrapper_cpp

./: .gitignore  CMakeLists.txt  Platformwrapper_cpp.vcxproj
Source/: Appmain.cpp  StdInclude.h  Stdinclude.h  Stdinclude.hpp
Source/Arclight/: Arclight.cpp  Arclight.hpp
Source/Arclight/Subsystem/: Arccallback.cpp  Arccallback.hpp
Source/Configuration/: Defines.h  Defines.hpp  Macros.h  Macros.hpp
Source/Localcache/: Ayriacache.cpp  Ayriacache.h  Cachetaskmanager.cpp  Cachetaskmanager.h  Steamcache.cpp  Steamcache.h
Source/Platform/: PlatformIO.cpp  PlatformIO.hpp  Platformstructures.hpp
Source/Steam/: CSteamID.h  Interfacemanager.cpp  Interfacemanager.h  Steam.cpp  Steam.h  Steam.hpp  Steamcallback.cpp  Steamcallback.h  Steamcallbacks.h  Steamconfig.cpp  Steaminterface.cpp  Steaminterface.h
Source/Steam/Interfaces/: All.h  Interfaces.h  Interfaces.hpp  SteamApps.cpp  SteamClient.cpp  SteamFriends.cpp  SteamGameserver.cpp  SteamMasterserverUpdater.cpp  SteamMatchmaking.cpp  SteamMatchmakingservers.cpp  SteamNetworking.cpp  SteamRemotestorage.cpp  SteamScreenshots.cpp  SteamUser.cpp  SteamUserstats.cpp  SteamUtilities.cpp
Source/Steam/Subsystem/: CSteamID.h  CSteamID.hpp  Steamcallback.cpp  Steamcallback.h  Steamcallback.hpp  Steaminterface.cpp  Steaminterface.h  Steaminterface.hpp
Source/Utilities/Binary/: GetIAT.cpp  GetIAT.h  Hooking.cpp  Hooking.h
Source/Utilities/Text/: CSV.cpp  (+2 more)
Source/Utility/: Base64.hpp  Bytebuffer.cpp  Bytebuffer.hpp  Database.hpp  FNV1Hash.hpp  Filesystem.hpp  Hooking.cpp  Hooking.hpp  Logfile.hpp  Memprotect.hpp  PackageFS.cpp  PackageFS.hpp  Patternscan.cpp  Patternscan.hpp  Taskrunner.hpp  Variadicstring.hpp
(+7 files in other folders)
